--- a/forms.html
+++ b/forms.html
@@ -9,7 +9,7 @@
 		<form action="">
 			<center>
 				<h1><label for="text">Input Field</label></h1>
-				<br />
+
 				<input type="text" />
 				<br /><br />
 				<input type="password" />
@@ -38,6 +38,13 @@
 				<input type="checkbox" id="gender" checked /> Male <br /><br />
 				<input type="checkbox" id="gender" /> Female <br /><br />
 				<hr />
+				<h1>Radio Button</h1>
+				<input type="radio" name="" id="" />
+				<input type="radio" name="" id="" />
+				<input type="radio" name="" id="" />
+				<hr />
+				<h1>range</h1>
+				<input type="range" id="volume" min="0" max="100" value="70" />
 			</center>
 		</form>
 	</body>
