--- a/Assignments/jobform.html
+++ b/Assignments/jobform.html
@@ -1,4 +1,4 @@
-<h1>Job Application-Form</h1>
+<h1>College Application Form</h1>
 <form id="Job Application-Form">
 
     <input type="checkbox" name="" id="" required >
