--- a/class/api fetch asyn wait/async_await.htm
+++ b/class/api fetch asyn wait/async_await.htm
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>ASYNC AWAIT</title>
 	</head>
-	<body></body>
+	<body>
+		<script src="async_await.js"></script>
+	</body>
 </html>
